# ColonySimGodot

./: .gitignore  AI Fix  EntitySprite.tscn  icon.svg.import  project.godot  world.gdextension.uid
EntityData/: sprite_sheet_1_colonist.json  sprite_sheet_2_building.json  sprite_sheet_3_item.json
extensions/world/: .chunk.cpp.swm  .chunk.cpp.swn  .chunk.cpp.swo  .chunk.cpp.swp  .chunk.h.swp  .entity.h.swp  .perlinNoise.h.swp  .perlin_noise.cpp.swp  .world.cpp.swp  .world.h.swp  CMakeLists.txt  Makefile  building.cpp  building.h  chunk.cpp  chunk.h  colonist.cpp  colonist.h  entity.cpp  entity.h  entityDataReader.cpp  entityDataReader.h  entityJob.h  item.cpp  item.h  min_test.cpp  perlinNoise.h  perlin_noise.cpp  register_types.cpp  test_sim  threadpool.h  world.cpp  world.gdextension  world.gdextension.uid  world.h
extensions/world/.cache/clangd/index/: a_hash_map.hpp.38E979E199386F84.idx  aabb.hpp.BE609B77FACC089D.idx  array.hpp.AD0F993E6ACBF3FA.idx  array_helpers.hpp.DB99E8ED3C0AA1B5.idx  basis.hpp.09E5A01EBD85EB7D.idx  binder_common.hpp.E41F45E46AFF8EC3.idx  builtin_binds.hpp.979DB851FABE683C.idx  builtin_types.hpp.28829BF33AA9F27A.idx  builtin_vararg_methods.hpp.151BDA0D392F6E4D.idx  callable.hpp.3D004C7B80FA3142.idx  callable_custom.hpp.73D7A4BD3A018C63.idx  callable_method_pointer.hpp.9E9B98F33FF86026.idx  canvas_item.hpp.1F69EC6D5E25B685.idx  char_range.inc.hpp.BC9E393E779BEA09.idx  char_string.hpp.FB8F877748B91EAB.idx  char_utils.hpp.2F3F90EF8085FFC0.idx  chunk.cpp.6C1DE1DF56651422.idx  chunk.h.464440310D64C451.idx  class_db.hpp.FFFD7F0E1BF63E94.idx  class_db_singleton.hpp.ABE82C6FAAEE627E.idx  color.hpp.05BA3BF2F140F280.idx  cowdata.hpp.EEE25DAF421DCB00.idx  defs.hpp.53EA27B2CE748570.idx  dictionary.hpp.0FAA886DAC07F972.idx  entity.h.88012D4C1CE9E709.idx  error_macros.hpp.34335E327D080B30.idx  gdextension_interface.h.1B1D47585953ADBB.idx  global_constants.hpp.7848452965E6CA4B.idx  global_constants_binds.hpp.BFEB93C3CC63AEC1.idx  godot.hpp.C57C0B51E3D57F9A.idx  hash_map.hpp.A2F3C7CF166CEB59.idx  hashfuncs.hpp.38C6AE4E320C6BBB.idx  list.hpp.563F497173D88054.idx  local_vector.hpp.7071CA0B673B3FAA.idx  math.compat.inc.97F8D9CEECF587C9.idx  math.hpp.FFB2D6F761DA7C6C.idx  math_defs.hpp.57A073EAF64F553D.idx  memory.hpp.2C64BF856CA64165.idx  method_bind.hpp.D195DB26412C09DD.idx  method_ptrcall.hpp.9569C822807CBD3B.idx  (+57 more)
scenes/: ChunkRenderer.tscn  CreateGame.tscn  Main.tscn  MainGame.tscn  building_interface.tscn  create_game_ui.tscn  entity_click_popup.tscn  game_settings.tscn  game_ui.tscn  grid_selection_view.tscn  main_menu.tscn  main_menu_ui.tscn  sprite_sheet_tester.tscn  ui.tscn
scripts/: Benchmark.gd  Benchmark.gd.uid  CameraMovement.gd  CameraMovement.gd.uid  ChunkRenderer.gd  (+24 more)
(+3 files in other folders)
